--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,19 @@
 language: node_js
 node_js:
   - 0.7
+  
+compiler:
+  - clang
+  - gcc
+
+install:
+  - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
+  
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - gcc-4.8
+      - g++-4.8
+      - clang
