--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "",
-    "install": "node-gyp rebuild"
+    "install": "node-gyp rebuild -j 8"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,11 @@
     "grammar"
   ],
   "author": "Mike Lischke",
-  "license": "MIT",
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "http://www.opensource.org/licenses/MIT"
+    }  
+  ],
   "gypfile": true
 }
