Seems the license change in package.json was wrong.

--- a/package.json
+++ b/package.json
@@ -20,11 +20,6 @@
     "grammar"
   ],
   "author": "Mike Lischke",
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "http://www.opensource.org/licenses/MIT"
-    }  
-  ],
+  "license": "MIT",
   "gypfile": true
 }
