Some details work for having a first complete version.
- Merged in latest ANTLR C++ runtime.
- Added new functions getErrors and listSymbols.
- Allowed an undefined parameter for parse() (same as an empty string).
- Changed result values to use proper JS objects where useful (e.g. for positions).
- Added a few tests for all public APIs.
- Restructured index.js to hide internal functions. Fixed a few issues (mem leak, catch file exception on parse).
- Worked out a proper readme.

--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "antlr4-graps",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "ANTLR grammar parsing services",
   "main": "index.js",
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "test": "",
+    "test": "mocha",
     "install": "node-gyp rebuild -j 8"
   },
   "repository": {
