--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "antlr4-graps",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "ANTLR grammar parsing services",
   "main": "index.js",
   "directories": {
@@ -19,6 +19,12 @@
     "ANTLR",
     "grammar"
   ],
+  
+  "devDependencies": {
+    "mocha": "*",
+    "chai": "*"
+  },
+  
   "author": "Mike Lischke",
   "license": "MIT",
   "gypfile": true
