Added ts-node dev dependency + added some workarounds
Currently antlr4ts uses exceptions for certain functions which in other ANTLR targets return null instead. There will probably be new functions supporting that, but atm we have to make sure those exceptions don't kill our execution path.

--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "install": "tsc",
-    "test": "node_modules/mocha/bin/_mocha --colors out/test/**/*.js"
+    "test": "mocha --compilers ts:ts-node/register,tsx:ts-node/register"
   },
   "repository": {
     "type": "git",
@@ -29,7 +28,8 @@
     "chai": "^3.5.0",
     "mocha": "^2.5.3",
     "typescript": "^2.0.3",
-    "vscode": "^1.0.0"
+    "vscode": "^1.0.0",
+    "ts-node": "^1.7.3"
   },
   "author": "Mike Lischke",
   "license": "MIT"
