Enabled strict null checks and updated the code for that.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
         "inlineSources": true,
         "isolatedModules": false,
 		"allowSyntheticDefaultImports": true,
-		"experimentalDecorators": true
+		"experimentalDecorators": true,
+		"strictNullChecks": true
 	},
 	"include": [
 		"src/**/*.ts", "parser/**/*.ts", "test/**/*.ts"
