--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "grammar"
   ],
   "dependencies": {
-    "antlr4ts": ">=0.4.0-alpha.2"
+    "antlr4ts": "=0.4.0-alpha.3"
   },
   "devDependencies": {
     "@types/chai": "^3.4.34",
