--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "antlr4-graps",
-  "version": "1.2.11",
+  "version": "1.2.12",
   "description": "ANTLR grammar parsing services",
   "main": "out/index.js",
   "scripts": {
@@ -18,7 +18,8 @@
     "grammar"
   ],
   "dependencies": {
-    "antlr4ts": "=0.4.0-alpha.4"
+    "antlr4ts": "^0.4.0-alpha.4",
+    "antlr4-c3": "^1.0.0"
   },
   "devDependencies": {
     "@types/chai": "^3.4.34",
