--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "antlr4-graps",
-  "version": "1.3.2",
+  "version": "1.3.3",
   "description": "ANTLR grammar parsing services",
   "main": "out/index.js",
+  "typings": "out/index.d.ts",
   "scripts": {
     "antlr4ts": "antlr4ts grammars/ANTLRv4LexBasic.g4 grammars/ANTLRv4Lexer.g4 grammars/ANTLRv4Parser.g4 -o parser -visitor",
-    "postinstall": "tsc",
+    "prepublish": "tsc",
     "test": "mocha --compilers ts:ts-node/register,tsx:ts-node/register"
   },
   "repository": {
@@ -18,18 +19,18 @@
     "grammar"
   ],
   "dependencies": {
+    "antlr4-c3": "^1.0.5",
     "antlr4ts": "^0.4.0-alpha.4",
-    "antlr4-c3": "^1.0.0"
+    "child_process": "^1.0.2"
   },
   "devDependencies": {
-    "@types/chai": "^3.4.34",
-    "@types/mocha": "^2.2.32",
-    "@types/node": "^6.0.40",
+    "@types/chai": "^3.5.2",
+    "@types/mocha": "^2.2.41",
+    "@types/node": "^7.0.18",
     "chai": "^3.5.0",
-    "mocha": "^2.5.3",
-    "typescript": "^2.0.3",
-    "vscode": "^1.0.0",
-    "ts-node": "^1.7.3"
+    "mocha": "^3.3.0",
+    "typescript": "^2.3.2",
+    "ts-node": "^3.0.4"
   },
   "author": "Mike Lischke",
   "license": "MIT"
