Let mocha test the transpiled code or some paths get messed up.
When running mocha with the .ts source files our path resolution for relative paths in the module fails (.ts files are a folder level higher than the transpiled code).

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "antlr4ts": "antlr4ts grammars/ANTLRv4LexBasic.g4 grammars/ANTLRv4Lexer.g4 grammars/ANTLRv4Parser.g4 -o parser -visitor",
     "prepublish": "tsc",
     "install": "tsc",
-    "test": "mocha --compilers ts:ts-node/register,tsx:ts-node/register"
+    "test": "tsc && mocha out/test"
   },
   "repository": {
     "type": "git",
