--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "typings": "out/index.d.ts",
   "scripts": {
     "antlr4ts": "antlr4ts grammars/ANTLRv4LexBasic.g4 grammars/ANTLRv4Lexer.g4 grammars/ANTLRv4Parser.g4 -o parser -visitor",
-    "prepublishOnly": "npm run antlr4ts && npm run test",
+    "prepublishOnly": "npm run test",
     "test": "npm install typescript && tsc && npm install mocha && mocha out/test"
   },
   "repository": {
@@ -19,19 +19,17 @@
     "grammar"
   ],
   "dependencies": {
-    "antlr4-c3": "^1.1.1",
-    "antlr4ts": "^0.4.0-alpha.4",
-    "child_process": "^1.0.2",
-    "qunit": "^1.0.0"
+    "antlr4-c3": "^1.1.2",
+    "antlr4ts": "^0.4.0-burt.2"
   },
   "devDependencies": {
     "@types/chai": "^3.5.2",
     "@types/mocha": "^2.2.41",
-    "@types/node": "^7.0.29",
+    "@types/node": "^7.0.32",
     "chai": "^3.5.0",
-    "mocha": "^3.3.0",
-    "ts-node": "^3.0.6",
-    "typescript": "^2.3.4"
+    "mocha": "^3.4.2",
+    "ts-node": "^3.1.0",
+    "typescript": "^2.4.0"
   },
   "author": "Mike Lischke",
   "license": "MIT"
