--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "antlr4-graps",
-  "version": "1.3.7",
+  "version": "1.3.8",
   "description": "ANTLR grammar parsing services",
   "main": "out/index.js",
   "typings": "out/index.d.ts",
@@ -20,12 +20,12 @@
   ],
   "dependencies": {
     "antlr4-c3": "^1.1.2",
-    "antlr4ts": "^0.4.0-burt.2"
+    "antlr4ts": "^0.4.1-alpha.0"
   },
   "devDependencies": {
     "@types/chai": "^3.5.2",
     "@types/mocha": "^2.2.41",
-    "@types/node": "^7.0.33",
+    "@types/node": "^7.0.38",
     "chai": "^3.5.0",
     "mocha": "^3.4.2",
     "typescript": "~2.3.4"
