Lots of fine tuning in this patch.
Now there is a big test file for most of the settings, which are used in various combinations.
Another test file (not yet used) will deal with various alignments and their combined use. It will at the same time also be used for performance testing (almost 10K lines to format).

--- a/package.json
+++ b/package.json
@@ -20,14 +20,18 @@
   ],
   "dependencies": {
     "antlr4-c3": "^1.1.4",
-    "antlr4ts": "^0.4.1-alpha.0"
+    "antlr4ts": "^0.4.1-alpha.0",
+    "fs-extra": "^4.0.2",
+    "glob": "^7.1.2"
   },
   "devDependencies": {
     "@types/chai": "^3.5.2",
-    "@types/mocha": "^2.2.41",
-    "@types/node": "^7.0.39",
+    "@types/glob": "^5.0.32",
+    "@types/mocha": "^2.2.43",
+    "@types/node": "^7.0.43",
+    "@types/fs-extra": "^4.0.2",
     "chai": "^3.5.0",
-    "mocha": "^3.5.0",
+    "mocha": "^3.5.3",
     "typescript": "~2.3.4"
   },
   "author": "Mike Lischke",
