--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,29 @@
 {
-	"compilerOptions": {
-		"declaration": true,
+    "compilerOptions": {
+        "mapRoot": "./out",
+        "declaration": true,
         "module": "commonjs",
         "target": "es6",
         "outDir": "out",
         "removeComments": true,
-		"noImplicitAny": true,
+        "noImplicitAny": true,
         "sourceMap": true,
         "inlineSources": true,
         "isolatedModules": false,
-		"allowSyntheticDefaultImports": true,
-		"experimentalDecorators": true,
-		"strictNullChecks": true
-	},
-	"compileOnSave": true,
-	"include": [
-		"src/**/*.ts", "parser/**/*.ts", "test/**/*.ts"
-	],
-	"exclude": [
-		"node_modules",
-		".vscode-test",
-		"generated"
-	]
+        "allowSyntheticDefaultImports": true,
+        "experimentalDecorators": true,
+        "strictNullChecks": true
+    },
+    "compileOnSave": true,
+    "include": [
+        "src/**/*.ts", "parser/**/*.ts", "test/**/*.ts"
+    ],
+    "exclude": [
+        "node_modules",
+        ".vscode-test",
+        "generated"
+    ],
+    "outFiles": [
+        "${workspaceRoot}/out/**/*.js"
+    ]
 }
