--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "antlr4-graps",
-  "version": "1.3.13",
+  "version": "1.3.15",
   "description": "ANTLR grammar parsing services",
   "main": "out/index.js",
   "typings": "out/index.d.ts",
@@ -21,18 +21,18 @@
   "dependencies": {
     "antlr4-c3": "^1.1.4",
     "antlr4ts": "^0.4.1-alpha.0",
-    "fs-extra": "^4.0.2",
+    "fs-extra": "^5.0.0",
     "glob": "^7.1.2"
   },
   "devDependencies": {
     "@types/chai": "^3.5.2",
-    "@types/fs-extra": "^4.0.5",
-    "@types/glob": "^5.0.33",
-    "@types/mocha": "^2.2.44",
-    "@types/node": "^7.0.48",
+    "@types/fs-extra": "^5.0.0",
+    "@types/glob": "^5.0.34",
+    "@types/mocha": "^2.2.45",
+    "@types/node": "^8.5.2",
     "chai": "^3.5.0",
     "mocha": "^3.5.3",
-    "typescript": "~2.3.4"
+    "typescript": "^2.6.2"
   },
   "author": "Mike Lischke",
   "license": "MIT"
